[package]
name = "dc-comic-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
md-5 = "0.10"  
digest = "0.10"

